version 78 Crash in [@ MsgHdrsToTArray]
Categories
(MailNews Core :: Networking: IMAP, defect)
Tracking
(thunderbird_esr78+ fixed, thunderbird81 affected)
People
(Reporter: wsmwk, Assigned: mkmelin)
References
(Regression)
Details
(Keywords: crash, regression)
Crash Data
Attachments
(1 file)
|
3.30 KB,
patch
|
benc
:
review+
wsmwk
:
approval-comm-esr78+
|
Details | Diff | Splinter Review |
Our imap threading friend?
Crash report: https://crash-stats.mozilla.org/report/index/0264f555-6cb5-449f-9eaf-a7c040200914
Top 10 frames of crashing thread:
0 xul.dll MsgHdrsToTArray comm/mailnews/base/src/nsMsgUtils.cpp:1886
1 xul.dll nsImapMailFolder::OnStopRunningUrl comm/mailnews/imap/src/nsImapMailFolder.cpp:4939
2 xul.dll nsMsgMailNewsUrl::SetUrlState comm/mailnews/base/src/nsMsgMailNewsUrl.cpp:231
3 xul.dll nsImapMailFolder::SetUrlState comm/mailnews/imap/src/nsImapMailFolder.cpp:6337
4 xul.dll `anonymous namespace'::SyncRunnable5<nsIImapMailFolderSink, nsIImapProtocol*, nsIMsgMailNewsUrl*, bool, bool, nsresult>::Run comm/mailnews/imap/src/nsSyncRunnableHelpers.cpp:221
5 xul.dll nsThread::ProcessNextEvent xpcom/threads/nsThread.cpp:1211
6 xul.dll NS_ProcessNextEvent xpcom/threads/nsThreadUtils.cpp:501
7 xul.dll mozilla::ipc::MessagePump::Run ipc/glue/MessagePump.cpp:109
8 xul.dll MessageLoop::RunHandler ipc/chromium/src/base/message_loop.cc:308
9 xul.dll MessageLoop::Run ipc/chromium/src/base/message_loop.cc:290
| Assignee | ||
Comment 1•5 years ago
|
||
https://hg.mozilla.org/releases/comm-esr78/file/tip/mailnews/base/src/nsMsgUtils.cpp#l1886
https://hg.mozilla.org/releases/comm-esr78/file/tip/mailnews/imap/src/nsImapMailFolder.cpp#l4939
MsgHdrsToTArray is getting null messages. I think we can treat that as empty and go on.
| Assignee | ||
Comment 2•5 years ago
|
||
I wonder if this surfaced after bug 1658797.
| Reporter | ||
Comment 3•5 years ago
|
||
(In reply to Magnus Melin [:mkmelin] from comment #2)
...
I wonder if this surfaced after bug 1658797.
I'd say both crashes started at the same time. Both first appear with 78.0b2 BETA - this bug with buildid 20200622204154 and bug 1658797 with buildid 20200616103211
So the regression is likely in the uplifts https://hg.mozilla.org/releases/comm-beta/pushloghtml?fromchange=THUNDERBIRD_78_0b1_RELEASE&tochange=THUNDERBIRD_78_0b2_RELEASE&full=1 If not that, then the merge for 78.0b1
Comment 4•5 years ago
|
||
| Reporter | ||
Comment 5•5 years ago
|
||
It will be interesting to see if this kills it dead
| Assignee | ||
Updated•5 years ago
|
Pushed by geoff@darktrojan.net:
https://hg.mozilla.org/comm-central/rev/250a6c111f71
fix Crash in [@ MsgHdrsToTArray]. r=benc DONTBUILD
| Assignee | ||
Comment 8•5 years ago
|
||
Comment on attachment 9175705 [details] [diff] [review]
bug1664858_msghdrstoarray.patch
[Approval Request Comment]
Safe crash fix, would take on 78:
https://hg.mozilla.org/comm-central/rev/250a6c111f71
https://hg.mozilla.org/comm-central/rev/f51e43c76fbc
| Reporter | ||
Comment 9•5 years ago
|
||
Comment on attachment 9175705 [details] [diff] [review]
bug1664858_msghdrstoarray.patch
[Triage Comment]
Approved for esr78
Comment 10•5 years ago
|
||
| bugherder uplift | ||
Description
•