Bug 1664858 - fix Crash in [@ MsgHdrsToTArray]. r=benc DONTBUILD